Fix overlay bug
The overlay was previously only made transparent, not moved off
the screen. So the restart button on the game-ending overlay could
not be clicked because the overlay has a higher z-index.
This change moves the overlay off-screen in addition to its
transparency.

--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,13 @@ body {
 
   opacity: 1;
 
-  transition: background 0.5s, opacity 0.5s;
+  transition: all 0.5s;
 }
 
 .hidden {
   background: rgba(0, 0, 0, 0);
   opacity: 0;
+  top: -999px;
 }
 
 .game-choices {
@@ -167,7 +168,7 @@ button {
   justify-content: center;
   align-items: center;
 
-  transition: top 0.5s;
+  transition: all 0.5s;
 }
 
 .shown {
